🔧 配置双语博客系统
- 新增英文站点配置文件 _config.butterfly-en.yml
- 配置 Vercel 部署设置和路由规则
- 添加双语构建和服务脚本
- 优化博客配置参数设置

--- a/blog/themes/butterfly/layout/includes/page/flink.pug
+++ b/blog/themes/butterfly/layout/includes/page/flink.pug
@@ -4,7 +4,7 @@
     - let pageContent = content
 
     if flink_url || random
-      - const linkData = flink_url ? false : site.data.link || false
+      - const linkData = flink_url ? false : site.data['link-en'] || false
       script.
         (()=>{
           const replaceSymbol = (str) => {
@@ -54,9 +54,9 @@
         })()
 
     else
-      if site.data.link
+      if site.data['link-en']
         - let result = ""
-        each i in site.data.link
+        each i in site.data['link-en']
           - let className = i.class_name ? markdown(`## ${i.class_name}`) : ""
           - let classDesc = i.class_desc ? `<div class="flink-desc">${i.class_desc}</div>` : ""
 
